--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,15 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.ienze.SimpleRegionMarket</groupId>
     <artifactId>SimpleReionMarket</artifactId>
-    <version>3.3.6.1</version>
-    <name>SimpleRegionMarket</name>
+    <version>3.3.6</version>
+    <name>SimpleReionMarket</name>
     <description>WorldGuard Region Market Plugin</description>
     <url>http://dev.bukkit.org/server-mods/simple-region-market</url>
     <properties>
         <state>dev</state>
         <majorversion>3</majorversion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <minecraft.version>1.5.1</minecraft.version>
         <minecraft_version>1_5_R2</minecraft_version>
     </properties>
     <repositories>
@@ -61,9 +62,8 @@
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <version>1.5.1-R0.2-SNAPSHOT</version>
-            <scope>compile</scope>
-            <type>jar</type>
-            <optional>true</optional>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/craftbukkit-1.5.R0.2.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
@@ -103,7 +103,7 @@
         <dependency>
             <groupId>net.milkbowl.vault</groupId>
             <artifactId>Vault</artifactId>
-            <version>1.2.26-SNAPSHOT</version>
+            <version>1.2.16</version>
         </dependency>
         <dependency>
             <groupId>com.griefcraft</groupId>
@@ -119,9 +119,9 @@
         </dependency>
     </dependencies>
     <scm>
-        <url>https://github.com/andoitz/simple-region-market</url>
+        <url>https://github.com/Jadedwolf/simple-region-market</url>
         <tag>HEAD</tag>
-        <connection>scm:git:git@github.com:andoitz/simple-region-market.git</connection>
-        <developerConnection>git@github.com:andoitz/simple-region-market.git</developerConnection>
+        <connection>scm:git:git://github.com/Jadedwolf/simple-region-market.git</connection>
+        <developerConnection>scm:git:git@github.com:Jadedwolf/simple-region-market.git</developerConnection>
     </scm>
 </project>
