--- a/pom.xml
+++ b/pom.xml
@@ -62,8 +62,8 @@
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
             <version>1.5.1-R0.2-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/lib/craftbukkit-1.5.R0.2.jar</systemPath>
+            <type>jar</type>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
@@ -75,7 +75,7 @@
         <dependency>
             <groupId>com.sk89q</groupId>
             <artifactId>worldguard</artifactId>
-            <version>5.6.4</version>
+            <version>5.7.3</version>
             <exclusions>
             	<exclusion>
             		<artifactId>truezip</artifactId>
