--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>me.ienze.SimpleRegionMarket</groupId>
-    <artifactId>SimpleReionMarket</artifactId>
+    <artifactId>SimpleRegionMarket</artifactId>
     <version>3.3.7-SNAPSHOT</version>
     <name>SimpleRegionMarket</name>
     <description>WorldGuard Region Market Plugin</description>
