Huge amount of code optimizations(Tons of formatting changes along with optimizations) Fix First Load of SRM* Fixed the need to have BOSEconomy load first** Fixed the need for any economy plugin having issues with rent expire.*** Other stuff I missed... Too many changes.****

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,10 +1,10 @@
 name: SimpleRegionMarket
-version: 3.4
+version: 3.5
 authors: [Ienze, theZorro266]
 main: me.ienze.SimpleRegionMarket.SimpleRegionMarket
 load: POSTWORLD
 depend: ['WorldGuard', 'Vault']
-softdepend: ['Vault', 'dynmap', 'LWC']
+softdepend: ['Vault', 'BOSEconomy', 'dynmap', 'LWC']
 
 commands:
   regionmarket:
