--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         </repository>
     </repositories>
     <build>
+        <defaultGoal>clean package install</defaultGoal>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
